static resource path 오타 수정

--- a/yeojoy_nginx.conf
+++ b/yeojoy_nginx.conf
@@ -16,7 +16,7 @@ server {
         alias   /Users/yeojoy/uwsgi-tu/yeojoy/media;
     }
 
-    location /statuc {
+    location /static {
         alias   /Users/yeojoy/uwsgi-tu/yeojoy/static;
     }
 
